# vts-basic

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  E2E_TESTING.md  IMPLEMENTATION_SUMMARY.md  PWA_NOTES.md  README.md  TODO.md  biome.json  debug_docker.sh  entrypoint.sh  package.json  playwright.config.ts  postcss.config.cjs  precompress-assets.js  run_on_local_docker.sh  start-proxy.sh  tailwind.config.js  validate-build.js  vite.config.ts  vitest.config.ts
docs/: 0000_index.md  docker-quickstart.md
docs/rationale/: 0000_ADR_INDEX.md  0001_docker_deployment.md  0002_precompressed_assets_and_observability.md  0003_use_tanstack_start.md  0004_use_rust_proxy.md  0005_use_daisyui.md  template.md
e2e/: country.spec.ts  home.spec.ts
proxy/: CONFIG.md  Cargo.toml  proxy.ron
proxy/src/: config.rs  main.rs  state.rs
proxy/src/handlers/: api_countries.rs  api_events.rs  api_themes.rs  frontend_metrics.rs  health_check.rs  metrics.rs  mod.rs  proxy_fallback.rs  serve_asset.rs
proxy/tests/: proxy_integration.rs
public/: manifest.json  sw.js
src/: routeTree.gen.ts  router.tsx  setupTests.ts  styles.css
src/api/: client.ts  countries.ts
src/client/: emoji.ts
src/components/: CountryFlag.tsx  ErrorBoundary.tsx  Footer.tsx  Header.tsx  Skeleton.tsx  ThemeSwitcher.tsx  VirtualizedCountryList.tsx
src/components/__tests__/: Header.test.tsx  ThemeSwitcher.test.tsx
src/constants/: appVersion.ts  config.ts
src/enums/: routes.enum.ts
src/hooks/: useCountryFilters.ts
src/hooks/__tests__/: useCountryFilters.test.ts
src/integrations/tanstack-query/: root-provider.tsx
src/lib/: metrics.test.ts  metrics.ts
src/pages/: Home.tsx
src/pages/about/: index.tsx
src/pages/country/: index.tsx
src/pages/country/__tests__/: CountryPage.test.tsx
src/pages/error/: index.tsx
src/pages/metrics/: index.tsx
src/pages/notfound/: index.tsx
src/routes/: __root.tsx  about.tsx  country.tsx  index.tsx  metrics.test.tsx  metrics.tsx
src/types/: common.ts  theme.ts
src/utils/: storage.ts
src/utils/__tests__/: storage.test.ts
