[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
http-body-util = "0.1.3"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
mime_guess = "2.0.5"
prometheus = { version = "0.14.0", features = ["process"] }
sha2 = "0.10.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "compression-br"] }
