[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
hyper-util = { version = "0.1.18", features = ["client", "http1", "http2", "server"] }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", features = ["json"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower_governor = "0.8.0"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
