[package]
name = "proxy"
version = "0.3.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
hyper-util = { version = "0.1.19", features = ["client", "http1", "http2", "server"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
mime_guess = "2.0.5"
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json"] }
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower_governor = "0.8.0"
tower-http = { version = "0.6.8", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
